--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,90 @@
-# Created by venv; see https://docs.python.org/3/library/venv.html
-*
+# ===============================
+# Python bytecode / cache
+# ===============================
+__pycache__/
+*.py[cod]
+*$py.class
+# ===============================
+# Virtual environments
+# ===============================
+.venv/
+venv/
+env/
+ENV/
+.python-version
+pyvenv.cfg
+# ===============================
+# Packaging / build artifacts
+# ===============================
+build/
+dist/
+.eggs/
+*.egg-info/
+.eggs/
+
+# ===============================
+# Test / coverage
+# ===============================
+.pytest_cache/
+.coverage
+coverage.xml
+htmlcov/
+.tox/
+.nox/
+
+# ===============================
+# Logs
+# ===============================
+*.log
+
+# ===============================
+# IDE / editors
+# ===============================
+.idea/
+.vscode/
+*.iml
+
+# ===============================
+# OS files
+# ===============================
+.DS_Store
+Thumbs.db
+
+# ===============================
+# Jupyter
+# ===============================
+.ipynb_checkpoints/
+
+# ===============================
+# Environment variables / secrets
+# ===============================
+.env
+.env.*
+!.env.example
+
+# ===============================
+# Type checking
+# ===============================
+.mypy_cache/
+.pytype/
+.pyright/
+
+# ===============================
+# Lint / format
+# ===============================
+.ruff_cache/
+.pylint.d/
+
+# ===============================
+# Documentation build
+# ===============================
+docs/_build/
+site/
+
+# ===============================
+# Temporary files
+# ===============================
+*.tmp
+*.swp
+*.swo
+
