--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,17 +25,29 @@ jobs:
 
     - name: Install dependencies
       run: |
+        python -m venv .venv
         python -m pip install --upgrade pip
         pip install ruff black mypy pytest coverage
+        pip install -r requirements.txt
 
     - name: Lint with Ruff
-      run: ruff check .
+      run: ruff check src/
 
     - name: Check formatting with Black
-      run: black --check .
+      run: |
+        black src/
+        black --check src/
+
+    - name: Commit changes
+      run: |
+        git config user.name "CI Bot"
+        git config user.email "ci@example.com"
+        git add .
+        git commit -m "style: auto-format with Black" || echo "No changes to commit"
+        git push origin HEAD:${GITHUB_REF_NAME}
 
     - name: Type check with Mypy
-      run: mypy .
+      run: mypy src/
 
     - name: Run tests with pytest
       run: pytest tests/
