--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,22 +25,29 @@ jobs:
 
     - name: Install dependencies
       run: |
+        python -m venv .venv
         python -m pip install --upgrade pip
         pip install ruff black mypy pytest coverage
+        pip install -r requirements.txt
 
     - name: Lint with Ruff
-      run: ruff check .
+      run: ruff check src/
 
     - name: Check formatting with Black
-      run: black --check .
+      run: |
+        black src/
+        black --check src/
 
     - name: Type check with Mypy
-      run: mypy .
+      run: mypy src/
 
     - name: Run tests with pytest
-      run: pytest tests/
+      run: |
+        export PYTHONPATH=src
+        pytest tests/
 
     - name: Run coverage
       run: |
+        export PYTHONPATH=src
         coverage run -m pytest
         coverage report
