feat: added account repository, sqlite support for sqlalchemy and db configuration to 'config.json'

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,8 @@
 {
   "log_file": "C:/Users/vtoma/Downloads/logtest.txt.txt",
   "port": 65525,
-  "timeout": 5
+  "timeout": 5,
+  "database": {
+    "sqlite_path": "db/hackerbank.db"
+  }
 }
