--- a/src/config.json
+++ b/src/config.json
@@ -2,8 +2,8 @@
   "log_file": "C:/Users/vtoma/Downloads/logtest.txt.txt",
   "port": 65525,
   "timeout": 5,
-  "ip-network": "",
-  "ip-mask": "",
+  "ip_network": "192.168.1.0",
+  "ip_mask": 24,
   "database": {
     "sqlite_path": "db/hackerbank.db"
   }
