fix: fixed pip dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 customtkinter==5.2.2
-sqlalchemy==2.0.25
+sqlalchemy>=2.0.30
 black==26.1.0
 mypy==1.8.0
 ruff==0.2.1
 pytest==8.0.0
+asyncio
+aiosqlite
