--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "log_file": "C:/Users/vtoma/Downloads/logtest.txt",
+  "log_file": "/home/icykcypher/RiderProjects/log.log",
   "port": 65525,
   "timeout": 5,
   "ip_network": "127.0.0.0",
