--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
-  "log_file": "C:/Users/vtoma/Downloads/logtest.txt.txt",
-  "port": 65525,
+  "log_file": "C:/Users/vtoma/Downloads/text.log",
+  "port": 65530,
   "timeout": 5,
   "ip_network": "192.168.1.0",
   "ip_mask": 24,
