--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,8 @@
 {
-  "log_file": "C:/Users/vtoma/Downloads/text.log",
-  "port": 65530,
+  "log_file": "C:\\Users\\solonitsyn\\log.log",
+  "port": 65525,
   "timeout": 5,
-  "ip_network": "127.0.0.0",
+  "ip_network": "192.168.1.0",
   "ip_mask": 30,
   "database": {
     "sqlite_path": "db/hackerbank.db"
